--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/PlusButton" />
+        app:srcCompat="@drawable/plusbutton" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
