Made the recent journals show up ont he first page!

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,17 @@
         tools:context=".MainActivity"
         tools:showIn="@layout/activity_main">
 
-        <LinearLayout
-            android:id="@+id/JournalEntriesDisplay"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/JournalEntriesDisplay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
