--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,9 +36,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
                 android:paddingTop="10dp"
-                android:paddingRight="20dp" />
+                android:paddingBottom="10dp" />
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
