--- a/app/src/main/res/layout/chunk_mini_journal_entry.xml
+++ b/app/src/main/res/layout/chunk_mini_journal_entry.xml
@@ -5,7 +5,8 @@
     android:id="@+id/MainCard"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    app:cardMaxElevation="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Holder"
@@ -39,6 +40,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -137,6 +139,7 @@
                     tools:text="Positive Aspects" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
