--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,14 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
+            <!-- https://stackoverflow.com/questions/4259467/how-to-make-space-between-linearlayout-children -->
             <LinearLayout
                 android:id="@+id/JournalEntriesDisplay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:divider="@drawable/empty_tall_divider"
                 android:orientation="vertical"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp" />
+                android:showDividers="middle" />
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
