--- a/app/src/main/res/layout/chunk_mini_journal_entry.xml
+++ b/app/src/main/res/layout/chunk_mini_journal_entry.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     app:cardCornerRadius="20dp"
+    app:cardElevation="5dp"
     app:cardMaxElevation="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
