Bottom bar navigation now

--- a/app/src/main/res/layout/activity_new_journal_entry.xml
+++ b/app/src/main/res/layout/activity_new_journal_entry.xml
@@ -28,6 +28,7 @@
                     android:id="@+id/deleteButton"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:contentDescription="Delete Button"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +54,7 @@
                     android:id="@+id/editButton"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:contentDescription="Edit Button"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
