--- a/app/src/main/res/layout/activity_new_journal_entry.xml
+++ b/app/src/main/res/layout/activity_new_journal_entry.xml
@@ -94,6 +94,7 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
+            style="@style/Widget.AppCompat.RatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
